# habit-tracking

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
habit_tracking/: __init__.py  __main__.py  app.py  app_orig.py  config.py  dataset.py  features.py  plots.py  stats.py  stats_plots.py  tracker.py
habit_tracking/modeling/: predict.py  train.py
notebooks/: 20250531_RecreatingR_HT_Processing.ipynb  20260320_Response_to_StatAnal.md  20260320_Statistical_Analysis.ipynb
tests/: test_tracker.py
