[project]
name = "habit_tracking"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Katy Yut" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
    "statsmodels>=0.14.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.4.0",
    "streamlit (>=1.55.0,<2.0.0)",
    "streamlit-extras (>=0.7.8,<0.8.0)",
]
requires-python = ">3.13.0,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
src = ["habit_tracking"]
include = ["pyproject.toml", "habit_tracking/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["habit_tracking"]
force-sort-within-sections = true


[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
